--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic -Wextra -Wconversion")
+
 #set the application icon
 set(APP_ICON "${CMAKE_CURRENT_SOURCE_DIR}/appIcon.rc")
 
@@ -71,3 +73,5 @@ install(TARGETS xxxapp
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(xxxapp)
 endif()
+
+#message("Nombre del sistema: ${CMAKE_HOST_SYSTEM_NAME}")
