Added a login form, icons and design were also added to said form; This form will allow you to create users and start a session, to be able to see the url of a certain user.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ set(PROJECT_SOURCES
         dlgnewcategory.cpp
         dlgnewcategory.hpp
         dlgnewcategory.ui
+        logindialog.hpp
+        logindialog.cpp
+        logindialog.ui
+
         ${APP_ICON}
 
 )
