Code improvements: Moved more functions, enumerations and more, to the Helper_t class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,10 @@ set(PROJECT_SOURCES
         logindialog.hpp
         logindialog.cpp
         logindialog.ui
-
+         util/helper.cpp
+         util/helper.hpp
         ${APP_ICON}
+
 
 
 
@@ -41,7 +43,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
          rsc.qrc
-util/helper.cpp util/helper.hpp
+
 
     )
 
