--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
          rsc.qrc
+         resetpassworddialog.hpp resetpassworddialog.cpp resetpassworddialog.ui
+
 
 
     )
