Add qaesencryption class to CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,11 +41,12 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
          rsc.qrc
-         resetpassworddialog.hpp resetpassworddialog.cpp resetpassworddialog.ui
-
-
-
-    )
+         resetpassworddialog.hpp
+         resetpassworddialog.cpp
+         resetpassworddialog.ui
+         qaesencryption.cpp
+         qaesencryption.h
+      )
 
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET xxxapp APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
