Added categorydialog.hpp, categorydialog.cpp, categorydialog.ui, files to CMakeLists.txt. The forms, function in the helper class, and programming logic and everything necessary for the new feature to work were also added.Please enter the commit message for your changes. Lines starting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
          publicurldialog.hpp
          publicurldialog.cpp
          publicurldialog.ui
+         categorydialog.hpp categorydialog.cpp categorydialog.ui
          #qaesencryption.cpp
          #qaesencryption.h
       )
