--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,12 @@ db/xxx.sql
 .gitignore~
 ..gitignore.un~
 QtProjectsxxxapp-Debugdbxxx.db
-rsc.qrc.autosave
 InstallationLog.txt
 db/diagrama.mwb
 db/publicuser.txt
 db/xxxdb.db
 db/xdatabase.db
 img/*
-resetpassworddialog.ui.autosave
+*.autosave
 .gitignore.swp
 tools/*
