The custom class SWLabel was added to provide the labels with the click event.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
          publicurldialog.ui
          categorydialog.hpp categorydialog.cpp categorydialog.ui
          swtablemodel.hpp swtablemodel.cpp
+         swlabel.hpp swlabel.cpp
          #qaesencryption.cpp
          #qaesencryption.h
       )
