--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,10 @@ else()
     endif()
 endif()
 
-target_link_libraries(xxxapp PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+target_link_libraries(xxxapp PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql
+    ${CMAKE_CURRENT_SOURCE_DIR}/lib/libcrypto.lib)
 
 set_target_properties(xxxapp PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
